# vaultmesh-mesh

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  KEYS.md  LICENSE  Makefile  README-OPERATORS.md  README.md  RELEASING.md  deny.toml
.github/workflows/: ci.yml  deny-archives.yml  lint.yml  receipt.yml  release.yml
policy/: guard.rego
scripts/precommit/: deny-archives.sh
src/: env_meta.rs  gateway.rs  identity.rs  ledger.rs  lib.rs  main.rs  receipt.rs  schema.rs
src/sync/: mod.rs  policy.rs
tests/: ledger_classify.rs  schema_guard.rs  sync_merkle.rs
