[package]
name = "vaultmesh"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "VaultMesh CLI — receipts, Merkle, verification"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"
thiserror = "1"
base64 = "0.22"
hex = "0.4"
env_logger = "0.11"
ed25519-dalek = "1"
rand_core = "0.6"
getrandom = "0.2"
